fix(webapp): scrollbar

--- a/webapp/src/pages/Bonus/Online.scss
+++ b/webapp/src/pages/Bonus/Online.scss
@@ -12,7 +12,6 @@
 body {
     margin: 0;
     background-color: var(--background-color);
-    overflow: hidden;
 }
 
 .paddle {
